--- a/.github/workflows/pullRequest.yml
+++ b/.github/workflows/pullRequest.yml
@@ -9,13 +9,17 @@ on:
 jobs:
   test:
     runs-on: macos-latest
+    permissions:
+      actions: write
+      contents: read
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Cancel Previous Runs
         uses: styfle/cancel-workflow-action@0.9.1
         with:
           access_token: ${{ github.token }}
+          all_but_latest: true
 
       - uses: maxim-lobanov/setup-xcode@v1
         with:
