--- a/.github/workflows/pullRequest.yml
+++ b/.github/workflows/pullRequest.yml
@@ -46,10 +46,5 @@ jobs:
       - name: Clear Cache
         run: rm -rf ~/Library/Developer/Xcode/DerivedData
 
-      - name: Run Tests (No Cache)
-        if: steps.cache.outputs.cache-hit != 'true'
+      - name: Run Tests 
         run: bundle exec fastlane unit_test
-
-      - name: Run Tests (Cache)
-        if: steps.cache.outputs.cache-hit == 'true'
-        run: bundle exec fastlane unit_test --skip_package_dependencies_resolution true
