--- a/.github/workflows/pullRequest.yml
+++ b/.github/workflows/pullRequest.yml
@@ -15,6 +15,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Clean SPM Cache
+        run: |
+          rm -rf ~/Library/Developer/Xcode/DerivedData/*
+          rm -f LvL-up.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/Package.resolved
+          rm -rf .build
+
       - name: Cancel Previous Runs
         uses: styfle/cancel-workflow-action@0.9.1
         with:
@@ -24,6 +30,14 @@ jobs:
       - uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: '15.2'
+
+       - name: Resolve Packages
+        run: |
+          xcodebuild -resolvePackageDependencies \
+            -project "LvL-up.xcodeproj" \
+            -scheme "LvL-up" \
+            -derivedDataPath Build \
+            -scmProvider system
 
       - uses: ruby/setup-ruby@v1
 
