--- a/.github/workflows/pullRequest.yml
+++ b/.github/workflows/pullRequest.yml
@@ -21,6 +21,13 @@ jobs:
           access_token: ${{ github.token }}
           all_but_latest: true
 
+      - name: Clean SPM artifacts
+        run: |
+          rm -rf ~/Library/Developer/Xcode/DerivedData
+          rm -rf .build
+          rm -f LvL-up.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/Package.resolved
+          rm -rf Build/
+
       - uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: '15.2'
@@ -32,6 +39,15 @@ jobs:
 
       - name: Install gems
         run: bundle install
+
+      - name: Resolve Packages
+        run: |
+          xcodebuild -resolvePackageDependencies \
+            -workspace "LvL-up.xcodeproj/project.xcworkspace" \
+            -scheme "LvL-up" \
+            -derivedDataPath Build \
+            -scmProvider system \
+            -disableAutomaticPackageResolution
 
       - name: Swift Packages Cache
         uses: actions/cache@v3
