--- a/.github/workflows/pullRequest.yml
+++ b/.github/workflows/pullRequest.yml
@@ -26,8 +26,6 @@ jobs:
           xcode-version: '15.2'
 
       - uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '3.1'
 
       - name: Install Bundler
         run: gem install bundler
@@ -35,40 +33,23 @@ jobs:
       - name: Install gems
         run: bundle install
 
-      # 1. Оптимизированная очистка кеша
-      - name: Clean workspace
-        run: |
-          rm -rf ~/Library/Developer/Xcode/DerivedData
-          rm -rf .build
-          rm -rf Build/
-          # Не удаляем Package.resolved!
-
-      # 2. Кеширование с правильными путями
       - name: Swift Packages Cache
         uses: actions/cache@v3
-        id: spm-cache
+        id: cache
         with:
           path: |
-            ~/Library/Developer/Xcode/DerivedData
-            .build
-            Build
-          key: ${{ runner.os }}-spm-${{ hashFiles('**/Package.resolved') }}
-          restore-keys: |
-            ${{ runner.os }}-spm-
+            Build/SourcePackages
+            Build/Build/Products
+          key: ${{ runner.os }}-deps-v1-${{ hashFiles('LvL-up.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/Package.resolved') }}
+          restore-keys: ${{ runner.os }}-deps-v1-
 
-      # 3. Разрешение зависимостей с правильными параметрами
-      - name: Resolve Packages
-        run: |
-          xcodebuild -resolvePackageDependencies \
-            -workspace "LvL-up.xcodeproj/project.xcworkspace" \
-            -scheme "LvL-up" \
-            -derivedDataPath Build \
-            -scmProvider system \
-            -clonedSourcePackagesDirPath .build
+      - name: Clear Cache
+        run: rm -rf ~/Library/Developer/Xcode/DerivedData
 
-      # 4. Запуск тестов с явными путями
-      - name: Run Tests
-        run: |
-          bundle exec fastlane unit_test \
-            derived_data_path:"$PWD/Build" \
-            cloned_source_packages_dir_path:"$PWD/.build"
+      - name: Run Tests (No Cache)
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: bundle exec fastlane unit_test
+
+      - name: Run Tests (Cache)
+        if: steps.cache.outputs.cache-hit == 'true'
+        run: bundle exec fastlane unit_test --skip_package_dependencies_resolution true
