--- a/.github/workflows/pullRequest.yml
+++ b/.github/workflows/pullRequest.yml
@@ -33,6 +33,11 @@ jobs:
       - name: Install gems
         run: bundle install
 
+      - name: Delete and Recreate Package.resolved
+        run: |
+          rm -f "LvL-up.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/Package.resolved"
+          xcodebuild -resolvePackageDependencies -workspace "LvL-up.xcodeproj/project.xcworkspace" -scheme "LvL-up" -derivedDataPath Build/
+
       - name: Swift Packages Cache
         uses: actions/cache@v3
         id: cache
