--- a/LvL-up/Info.plist
+++ b/LvL-up/Info.plist
@@ -2,10 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>NSDeviceActivityUsageDescription</key>
-    <string>Приложению требуется доступ к Screen Time для контроля активности</string>
-
-    <key>com.apple.security.family-controls</key>
-    <true/>
+	<key>NSDeviceActivityUsageDescription</key>
+	<string>Приложению требуется доступ к Screen Time для контроля активности</string>
+	<key>com.apple.security.family-controls</key>
+	<true/>
+	<key>UIUserInterfaceStyle</key>
+	<string>Dark</string>
 </dict>
 </plist>
